--- a/app/package.json
+++ b/app/package.json
@@ -1,21 +1,50 @@
 {
-  "name": "app",
+  "name": "casa_app",
   "version": "1.0.0",
+  "description": "Casa_IoT",
+  "author": "IngNovaTech",
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "devn": "nodemon api/index.js --exec babel-node",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.19.3",
+    "@nuxtjs/pwa": "^3.3.5",
+    "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
+    "colors": "^1.4.0",
+    "cookieparser": "^0.1.0",
+    "core-js": "^3.23.3",
+    "cors": "^2.8.5",
+    "d3": "^7.6.1",
+    "es6-promise": "^4.2.8",
+    "express": "^4.18.1",
+    "fuse.js": "^6.6.2",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.4.2",
+    "mongoose-unique-validator": "^3.1.0",
+    "morgan": "^1.10.0",
+    "mqtt": "^4.3.7",
     "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "nuxt-highcharts": "^2.0.4",
+    "perfect-scrollbar": "^1.5.5",
+    "register-service-worker": "^1.7.2",
+    "tween.js": "^16.6.0",
+    "vue-chartjs": "^4.1.1",
+    "vue2-transitions": "^0.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-plugin-component": "^1.1.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^13.0.2"
+  }
 }
