Listar y crear RESOURCES en EMQX

--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - "8084:8084"
       - "1883:1883"
       - "8883:8883"
+      - "8085:8081"
     volumes:
       # - vol-emqx-data:/opt/emqx/data
       # - vol-emqx-etc:/opt/emqx/etc
@@ -43,7 +44,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       #Esto es para prueba de comunicación del webhook, luego se debe borrar
     extra_hosts:
-      - "localhost:192.168.80.15"
+      - "localhost:192.168.1.16"
     links:
       - mongo
     environment:
@@ -56,6 +57,8 @@ services:
       EMQX_DASHBOARD__DEFAULT_USER__LOGIN: "Admin_INT"
       #Contraseña para acceder al dashboard de EMQX
       EMQX_DASHBOARD__DEFAULT_USER__PASSWORD: "AdminIngNovaTech2013"
+      #Contraseña para acceder a la API de EMQX
+      EMQX_MANAGEMENT__DEFAULT_APPLICATION__SECRET: "Access_INT"
       #Se deshabilita la conexión sin credenciales
       EMQX_ALLOW_ANONYMOUS: "false"
       #Si no se tienen las credenciales para acceder aun tópico
